--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,19 @@
 python3 -m venv LibraryManagementSystem
 source LibraryManagementSystem/bin/activate
-#install flask
-pip install Flask
-flask --version # verify instalation
-# install additional dependencies
-# install Flask-CORS: To handle cross-origin requests from mobile devices.
-pip install flask-cors
-# Verify Installation of flask-cors
-pip show flask-cors
-# Install Flasgger Using pip
-pip install flasgger
-# Verify Installation
-pip show flasgger
-#install PyYAML: PyYAML is often needed for Flasgger to process YAML files.
-pip install pyyaml
-# install Flask-Login or Flask-JWT for login authentication
-pip install flask-login
-#Verify Installation
-pip show flask-login
-#install Flask-SQLAlchemy
-pip install flask-sqlalchemy
-#Verify Installation
-pip show flask-sqlalchemy
-#pip install mysqlclient  # recommended for production
-#pip install pymysql: pure python connector
-pip install pymysql
-#install mySQL
-sudo apt update  # update package index
-sudo apt install mysql-server # install 
-sudo mysql_secure_installation  # secure installation. Follow the prompts to set the root password and secure your installation.
-#keep track of the root password set during installation, as it'll be needed it to log in.
-sudo service mysql start  # Start MySQL Service:
-mysql -u root -p # Log into MySQL:
-pip install SQLAlchemy
-pip install mysqlclient #  MySQL Driver
-# mysql-devel or libmysqlclient-dev. can be used in instead of pip install mysqlclient
-'mysql+mysqldb://user:password@localhost/LMS' # Link MySQL Driver with SQLAlchemy: In your db_storage.py (or any file where you set up the connection), you specify the driver in the connection string. LMS is db name
+install Flask 
+install flask-cors
+install flasgger
+install pyyaml
+install flask-login
+install flask-sqlalchemy
+install pymysql
+sudo apt update 
+sudo apt install mysql-server  
+sudo mysql_secure_installation 
+sudo service mysql start 
+mysql -u root -p 
+install SQLAlchemy
+install mysqlclient 
+'mysql+mysqldb://user:2024@Github@localhost/LMS'
 
-# install Bootstrap: For responsive web design to work on iOS/Android browsers
-# crete virtual environment
-# active virtual environment
-# install  requirements: pip install flask flasgger flask-cors
-# run application*method recommended on virtual environemt: python3 app.py
-#deactive 
+ 
